--- a/ShoppingCart/Views/Admin/index.cshtml
+++ b/ShoppingCart/Views/Admin/index.cshtml
@@ -16,7 +16,40 @@
         </li>
     </ul>
     <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="users" role="tabpanel" aria-labelledby="users-tab">...</div>
+    <div class="tab-pane fade show active" id="users" role="tabpanel" aria-labelledby="users-tab">
+             <div class="container">
+            <div class="row">
+                <table class="table">
+                    <thead>
+                        <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Username</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone number</th>
+                        <th scope="col">Occupation</th>
+                        <th scope="col">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                      @for (int i = 0; i < ViewBag.users.Count; i++)
+                        {
+                            <tr>
+                                <td>@(i + 1)</td>
+                                <td>@ViewBag.users[i].UserName</td>
+                                <td>@ViewBag.users[i].Email</td>
+                                <td>@ViewBag.users[i].PhoneNumber</td>
+                                <td>@ViewBag.users[i].Occupation</td>
+                                <td>
+                                    <button>Approve</button>
+                                    <button>Reject</button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                    </table>
+            </div>
+        </div>
+    </div>
     <div class="tab-pane fade" id="products" role="tabpanel" aria-labelledby="products-tab">
         <div class="container">
             <div class="row">
@@ -40,7 +73,7 @@
                                 <td><img src="/media/products/@product.Image" width="60"> </td>
                                 <td>@product?.Name</td>
                                 <td>@product?.Price</td>
-                                <td>@product?.Category?.Id</td>
+                                <td>@product?.Category?.Name</td>
                                 <td>@product?.Vendor</td>
                                 <td>
                                     <button>Approve</button>
