--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                                       @* should show base only for admin *@
                                      <li><a class="dropdown-item" href="/admin">Administration</a></li>
                                       @* should show base only for vendor *@
-                                     <li><a class="dropdown-item" href="/ManagingProducts">My store</a></li>
+                                     <li><a class="dropdown-item" href="/vendor">My store</a></li>
                                 <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
                                 <li>
                                     <a class="dropdown-item
