--- a/ShoppingCart/Views/Admin/index.cshtml
+++ b/ShoppingCart/Views/Admin/index.cshtml
@@ -85,21 +85,20 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var product in ViewBag.products)
-                        { 
-                            <tr>
-                                <th scope="row">@product.Id</th>
-                                <td><img src="/media/products/@product.Image" width="60"> </td>
-                                <td>@product?.Name</td>
-                                <td>@product?.Price</td>
-                                <td>@product?.Category?.Name</td>
-                                <td>@product?.Vendor</td>
-                                <td>
+                        @for (int i = 0; i < ViewBag.products.Count; i++)
+                        {
+
+                              <tr>
+                                  <th scope="row">@(i + 1)</th>
+                                  <td><img src="/media/products/@ViewBag.products[i].Image" width="60"> </td>
+                                  <td>@ViewBag.products[i]?.Name</td>
+                                  <td>@ViewBag.products[i]?.Price</td>
+                                  <td>@ViewBag.products[i]?.Category?.Name</td>
+                                  <td>
                                     <button>Approve</button>
                                     <button>Reject</button>
-                                  
-                                </td>
-                            </tr>
+                                  </td>
+                              </tr>
                         }
                     </tbody>
                     </table>
