--- a/ShoppingCart/Views/Admin/index.cshtml
+++ b/ShoppingCart/Views/Admin/index.cshtml
@@ -95,8 +95,8 @@
                                   <td>@ViewBag.products[i]?.Price</td>
                                   <td>@ViewBag.products[i]?.Category?.Name</td>
                                   <td>
-                                    <a class="btn btn-success" asp-controller="Admin" asp-action="Approve" asp-route-id="@ViewBag.products[i].Id"><i class="bi bi-pencil-square"></i></a>
-                                    <a class="btn btn-danger" asp-controller="Admin" asp-action="Reject" asp-route-id="@ViewBag.products[i].Id"><i class="bi bi-trash"></i></a>
+                                    <a class="btn btn-success" asp-controller="Admin" asp-action="ApproveProduct" asp-route-id="@ViewBag.products[i].Id">Approve</a>
+                                    <a class="btn btn-danger" asp-controller="Admin" asp-action="RejectProduct" asp-route-id="@ViewBag.products[i].Id">Reject</a>
                                   </td>
                               </tr>
                         }
