change ui a litle

--- a/ShoppingCart/Views/Order/index.cshtml
+++ b/ShoppingCart/Views/Order/index.cshtml
@@ -85,7 +85,7 @@
                                                     <p class="col-sm-4 d-flex justify-content-between">
                                                         <a class="link" asp-controller="cart" asp-action="Decrease" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-down-short"></i></a>
                                                         <span class="t-12">@item.Quantity</span>
-                                                        <a class="link" asp-controller="cart" asp-action="Add" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-up-short"></i></a>
+                                                        <a class="link" asp-controller="cart" asp-action="AddToCart" asp-route-id="@item.Product.Id"><i class="bi bi-arrow-up-short"></i></a>
                                                     </p>
                                                 </div>
                                             </div>
