--- a/ShoppingCart/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart/Views/Shared/_Layout.cshtml
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ShoppingCart.styles.css" asp-append-version="true" />
-
 </head>
+
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Products" asp-action="Index">ShoppingCart</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Products" asp-action="Index">
+                    <i class="bi bi-shop"></i> ShoppingCart
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,21 +27,31 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/products" aria-current="page">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Shop</a>
+
+                        <li class="nav-item justify-content-end">
+                            <form class="d-flex" role="search" asp-controller="products" asp-action="index">
+                                <div class="input-group">
+                                    <span class="input-group-text" id="basic-addon1">
+                                        <a id="selected-category" class="dropdown-toggle"  data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">All</a>
+                                        <div class="dropdown-menu" id="category-dropdown">
+                                            @await Component.InvokeAsync("Categories")
+                                            @if (User.IsInRole("Vendor"))
+                                            {
+                                                <div class="dropdown-divider"></div>
+                                                <a class="dropdown-item" asp-area="admin" asp-controller="category" asp-action="index">
+                                                    <i class="bi bi-plus-square"></i> New Category
+                                                </a>
+                                            }
+                                        </div>
+                                    </span>
+                                    <input name="SearchString" type="search" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+                                    <button class="btn btn-light" type="submit">
+                                        <i class="bi bi-search"></i>
+                                    </button>
+                                </div>
+                            </form>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Deals</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
-                        </li>
-                    
-                    <form class="d-flex" asp-controller="Products" asp-action="Index">
-                        <input class="form-control me-2" type="text" name="SearchString" placeholder="Search" aria-label="Search">
-                        <input class="btn btn-outline-light" type="submit" value="Search" />
-                    </form>
-                    
+
                         @await Component.InvokeAsync("SmallCart")
                         @if (!User.Identity?.IsAuthenticated ?? false)
                         {
@@ -48,7 +60,7 @@
                             </li>
                         }
                     </ul>
-                     @if (User.Identity?.IsAuthenticated ?? false)
+                    @if (User.Identity?.IsAuthenticated ?? false)
                     {
                         <hr>
                         <div class="dropdown">
@@ -57,11 +69,11 @@
                                 <strong>@User.Identity.Name</strong>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-light dropdown-menu-end text-small shadow" aria-labelledby="dropdownUser1">
-                                  @if (User.IsInRole("Customer"))
-                                  {
+                                @if (User.IsInRole("Customer"))
+                                {
                                     <a class="btn btn-vendor" data-bs-toggle="modal" data-bs-target="#vendorModal">Become a Vendor</a>
                                     <li><hr class="dropdown-divider"></li>
-                                  }
+                                }
                                 @if (User.IsInRole("Admin"))
                                 {
                                     <li><a class="dropdown-item" href="/admin">Administration</a></li>
@@ -83,61 +95,46 @@
 
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3">
-                <!-- Sidebar -->
-                <div class="d-flex flex-column flex-shrink-0 bg-light">
-                    <a asp-controller="Products" asp-action="Index" class="d-flex align-items-center justify-content-center p-3 mb-3 link-dark text-decoration-none border-bottom">
-                        <span class="fs-5 fw-semibold">Categories</span>
-                    </a>
-                    <ul class="nav nav-pills flex-column mb-auto">
-                        @*<vc:categories />*@
-                        @await Component.InvokeAsync("Categories")
-                    </ul>
-                </div>
-
-            </div>
-            <div class="col-md-9">
-                @RenderBody()
-            </div>
+        <div>
+            @RenderBody()
         </div>
     </div>
 
     <!-- Modal 1 -->
-<div class="modal fade" id="vendorModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Vendor Subscription</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body bg-image">        
-        <div class="card my-4 card-vendor mx-auto">
-            <div class="card-body d-flex">
-                <div class="col-9">
-                    <h4> Vendor Subscriber can manage their own store when they have been approved.</h4>
+    <div class="modal fade" id="vendorModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Vendor Subscription</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="col-3">
-                   <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffc107" class="bi bi-bag-check mt-4 mx-4" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
-                    <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-                    </svg>
+                <div class="modal-body bg-image">
+                    <div class="card my-4 card-vendor mx-auto">
+                        <div class="card-body d-flex">
+                            <div class="col-9">
+                                <h4> Vendor Subscriber can manage their own store when they have been approved.</h4>
+                            </div>
+                            <div class="col-3">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffc107" class="bi bi-bag-check mt-4 mx-4" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M10.854 8.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L7.5 10.793l2.646-2.647a.5.5 0 0 1 .708 0z" />
+                                    <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footers">
+                    <div class="d-grid gap-2 mx-5 my-3">
+                        <a class="btn btn-dark a-text" type="button" href="/checkout">20,000$US/year</a>
+                    </div>
+                    <div class="mx-5 my-3">
+                        <small class="f-11">By subscribing, you agree to our Vendor <a href="">Terms of Service.</a> Subscriptions auto-renew until canceled, as described in the Terms. Cancel anytime. A verified phone number is required to subscribe. If you've subscribed on another platform, manage your subscription through that platform.</p>
+                    </div>
                 </div>
             </div>
         </div>
-       
-      </div>
-      <div class="modal-footers">
-        <div class="d-grid gap-2 mx-5 my-3">
-            <a class="btn btn-dark a-text" type="button" href="/checkout">20,000$US/year</a>
-        </div>
-        <div class="mx-5 my-3">
-            <small class="f-11">By subscribing, you agree to our Vendor <a href="">Terms of Service.</a> Subscriptions auto-renew until canceled, as described in the Terms. Cancel anytime. A verified phone number is required to subscribe. If you've subscribed on another platform, manage your subscription through that platform.</p>
-        </div>
-      </div>
     </div>
-  </div>
-</div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
@@ -147,6 +144,19 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script>
+
+        $(document).ready(function () {
+            $('#category-dropdown').each(function (key, dropdown) {
+                var $dropdown = $(dropdown);
+                $dropdown.find('a').on('click', function () {
+                    console.log($(this).text());
+                    $(this).parent().siblings('#selected-category').text($(this).text());
+                });
+            });
+        });
+        
+    </script>
     <!-- Production version, optimized for size and speed -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
@@ -158,28 +168,28 @@
         border-color: #ffc107;
     }
 
-   .card-vendor {
+    .card-vendor {
         box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
         width: 80%;
-   }
+    }
 
-   .bg-image{
+    .bg-image {
         background: #FFC108;
         background: linear-gradient(180deg, #FFC108, #FFFFFF);
-   }
+    }
 
-   .btn-dark{
+    .btn-dark {
         border-radius: 9999px;
-   }
+    }
 
-   .f-11{
-        font-size:11px;
+    .f-11 {
+        font-size: 11px;
         line-height: 1px;
-   }
+    }
 
-   .a-text, .a-text:hover{
+    .a-text, .a-text:hover {
         color: #FFF !important;
-   }
+    }
 
 </style>
 
