--- a/ShoppingCart/Views/Admin/index.cshtml
+++ b/ShoppingCart/Views/Admin/index.cshtml
@@ -9,6 +9,7 @@
 }
 
 <main class="mt-5">
+  <div class="container">
     <h2 class="mb-3">Administration</h2>
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
@@ -43,7 +44,7 @@
                     <tbody>
                         @if (ViewBag.users != null)
                         {
-                            @for (int i = 0; i < ViewBag.users.Count; i++)
+                            @for (int i = 0; i < ViewBag.users?.Count; i++)
                             {
                                 <tr>
                                     <td>@(i + 1)</td>
@@ -86,7 +87,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @for (int i = 0; i < ViewBag.categories.Count; i++)
+                            @for (int i = 0; i < ViewBag.categories?.Count; i++)
                             {
 
                                 <tr>
@@ -121,7 +122,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @for (int i = 0; i < ViewBag.products.Count; i++)
+                        @for (int i = 0; i < ViewBag.products?.Count; i++)
                         {
 
                               <tr>
@@ -183,6 +184,7 @@
             </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
 </main>
